fixed horizontal scroll and block scroll on sidebar opening

--- a/electronicarts.css
+++ b/electronicarts.css
@@ -394,7 +394,7 @@ a.nav-link {
 }
 
 .latest-update-container {
-  width: 100vw;
+  width: 98vw;
 }
 .latest-update-container .disableLatest {
   display: none !important;
@@ -827,99 +827,6 @@ a.nav-link {
 .section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1:hover {
   outline-offset: 2px;
 }
-<<<<<<< HEAD
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1 .nationsSelect1 {
-  border: 2px solid #c2c2c2;
-  width: 600px;
-  height: 400px;
-  padding: 0 1rem;
-  position: absolute;
-  top: -40rem;
-  right: -2rem;
-  background-color: rgb(242, 241, 241);
-  display: flex;
-  flex-direction: column wrap;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1 .nationsSelect1 .nationsColumn1 {
-  height: 100%;
-  padding: 0 1.5rem;
-  flex: 1;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1 .nationsSelect1 .nationsColumn1 .firstColumn1 {
-  height: 11.1%;
-  border-bottom: 1px solid #dddcdc;
-  align-items: center;
-  display: flex;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1 .nationsSelect1 .nationsColumn1 .firstColumn1:hover {
-  transform: translateX(0.7rem);
-  transition: all 0.2s ease-in-out;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1 .nationsSelect1 .nationsColumn1 .firstColumn1 .nationsName1 {
-  padding-left: 1rem;
-  flex: 8;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1 .nationsSelect1 .nationsColumn1 .firstColumn1 .flagSpan {
-  flex: 1;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton {
-  height: 60px;
-  width: 150px;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion {
-  width: 100%;
-  height: 100%;
-  border: none;
-  border-radius: 1px;
-  font-size: 1.3rem;
-  text-align: left;
-  outline: 2px solid #c2c2c2;
-  padding: 0 1.2rem;
-  transition: all 0.1s ease-in-out;
-  position: relative;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion:hover {
-  outline-offset: 2px;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .nationsSelect {
-  border: 2px solid #c2c2c2;
-  width: 600px;
-  height: 400px;
-  padding: 0 1rem;
-  position: absolute;
-  top: -40rem;
-  right: -2rem;
-  background-color: rgb(242, 241, 241);
-  display: flex;
-  flex-direction: column wrap;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .nationsSelect .nationsColumn {
-  height: 100%;
-  padding: 0 1.5rem;
-  flex: 1;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .nationsSelect .nationsColumn .firstColumn {
-  height: 11.1%;
-  border-bottom: 1px solid #dddcdc;
-  align-items: center;
-  display: flex;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .nationsSelect .nationsColumn .firstColumn:hover {
-  transform: translateX(0.7rem);
-  transition: all 0.2s ease-in-out;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .nationsSelect .nationsColumn .firstColumn .nationsName {
-  padding-left: 1rem;
-  flex: 8;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .nationsSelect .nationsColumn .firstColumn .checkSpan {
-  flex: 1;
-}
-.section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .priceAndLanguage {
-  width: 100%;
-  color: rgb(125, 125, 125);
-}
-=======
 .section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton1 .selectRegion1 .priceAndLanguage {
   width: 100%;
   color: rgb(125, 125, 125);
@@ -1015,7 +922,6 @@ a.nav-link {
   width: 100%;
   color: rgb(125, 125, 125);
 }
->>>>>>> 50db200d52dea11cd0f3a412a7106ce597071853
 .section2 .networkFooter .networkFooterLinks .networkFooterLinksContainer .networkFooterSelect .networkFooterSelect1 .selectButton .selectRegion .selectNation {
   width: 100%;
   display: flex;
